@@ -82,7 +82,8 @@ class ChromiumLinuxPort(chromium.ChromiumPort):
 
     def _build_path(self, *comps):
         if self._options.use_drt:
-            base = os.path.join(self.path_from_webkit_base())
+            base = os.path.join(self.path_from_webkit_base(), 'WebKit',
+                                'chromium')
         else:
             base = self.path_from_chromium_base()
         if os.path.exists(os.path.join(base, 'sconsbuild')):
